# vps_bot

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  AI_CONTEXT.md  README.md  bot.py  pyproject.toml
.github/scripts/: notify_telegram.py
.github/workflows/: ci.yml  deploy-master.yml
deploy/systemd/: vps-bot.service.example
scripts/: run_dev.ps1  run_prod.sh
src/vps_bot/: app.py  config.py  handlers.py
src/vps_bot/services/: build_info.py  logs.py  minecraft.py  resources.py  systemd.py
src/vps_bot/telegram/: client.py  keyboards.py
tests/: test_config.py  test_minecraft.py
