[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vps-bot"
version = "0.1.0"
description = "Telegram bot for managing a Minecraft server on a VPS"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vps-bot = "vps_bot.app:main"

[tool.setuptools.packages.find]
where = ["src"]
